# python-lambda-function-template

./: .gitignore  Dockerfile  Makefile  mypy.ini  pyproject.toml
.github/workflows/: check.yml
aws/: main.py
src/: environment.py  main.py
